--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,7 +32,7 @@ repositories {
     jcenter()
     maven { url 'http://oss.sonatype.org/content/repositories/snapshots' }
     maven { url "https://jitpack.io" }
-    maven { url "https://mint.splunk.com/gradle/"}
+    maven { url "https://mint.splunk.com/gradle/" }
 }
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
@@ -62,5 +62,5 @@ dependencies {
     compile 'com.birbit:android-priority-jobqueue:1.3.5'
     compile 'de.greenrobot:eventbus:2.2.0'
     compile 'com.bignerdranch.android:expandablerecyclerview:2.0.4'
-    compile "com.splunk.mint:mint:4.4.0"
+    compile 'com.splunk.mint:mint:4.4.0'
 }
